# blinky

./: CMakeLists.txt  prj.conf
boards/: esp32_devkitc_wroom_procpu.overlay  nucleo_f446re.overlay
lib/say_hello/: CMakeLists.txt  KConfig
lib/say_hello/include/: say_hello.h
lib/say_hello/src/: say_hello.c
lib/say_hello/zephyr/: module.yaml
src/: main.c
